<resources>
    <string name="app_name">SimpleRssReader</string>
    <string name="welcome_app">Welcome</string>
    <string name="set_user_password">Set your user and password to access to the system</string>
    <string name="those_will_allow_you_to_register">Those will allow you to register in the app.</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="empty_field">this field is required</string>
    <string name="rss_article_list">Rss Article List</string>
    <string name="no_articles_available">There are no articles available</string>
    <string name="database_name">movie_db</string>
    <string name="api_key">a23699d98306b3f2402653d126c1fc22</string>
    <string name="no_internet">Unable to display any movie, check your internet connection and try again, if the error persist, contact support.</string>
    <string name="off_line_mode">You have no internet connection, we are displaying this list from your internal storage.</string>
</resources>